--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -6,7 +6,7 @@ db.driver=com.mysql.jdbc.Driver
 model.package=com.renjith.rainb.model
 
 hibernate.show_sql=true
-hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 #below property will create a session bound to a thread.
 #hibernate.current_session_context_class=thread
