--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -7,6 +7,7 @@ model.package=com.renjith.rainb.model
 
 hibernate.show_sql=true
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+hibernate.hbm2ddl.auto=update
 
 #below property will create a session bound to a thread.
 #hibernate.current_session_context_class=thread
