--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 app.url=localhost:8080/rainb
 payment.error=Payment error.Contact your bank
 
+#file upload size
+file.maxsize=4000000
+
+#image path
+product.image_path=c:/renjith/rainb/images/
+
