--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
-app.url=localhost:8080/rainb
+app.url=http://localhost:8080/rainb
 payment.error=Payment error.Contact your bank
 
 #file upload size
 file.maxsize=4000000
 
 #image path
-product.image_path=c:/renjith/rainb/images/
+product.image_path=e:/varnavil/
+
+#fb
+fb.app_id=1145618485552721
+fb.app_secret=2a1ce441b49829db2be76b04f29e7006
+fb.redirect_url=${app.url}/fbcallback
 
